feat: Update job description form with ReactQuill editor
- Replace the textarea for job description with a ReactQuill editor
- Register necessary Quill modules and customize toolbar options

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- script tag for purifying DOM -->
+      <script type="text/javascript" src="dist/purify.min.js"></script>
   </body>
 </html>
